Best Update :airplane: :smirk:

--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -7,28 +7,76 @@
 </head>
 
 <body class="body">
-	<a href="index.html" target="_self" class="ref">
-		<h1 class="title backgroundColor">AUSTRALIA</h1>
-	</a>
-	<div class="menuNav">
+	<div class=" backgroundColor" id="topPage">
+		<a href="index.html" target="_self" class="ref">
+			<h1 class="title" id="title">
+				AUSTRALIA
+			</h1>
+		</a>
+	</div>
+
+	<div class="menuNav mainColor">
 		<ul>
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="mapa.html">Ubicacion</a></li>
+			<li><a href="mapa.html">Personajes</a></li>
+			<li><a href="mapa.html">Actividades</a></li>
+			<li><a href="mapa.html">Historia</a></li>
+			<li><a href="mapa.html">Creditos</a></li>
 			<li><a href="mapa.html">Mapa</a></li>
 		</ul>
 	</div>
-	
-	<div class="content lastColorWhite ">
-		<p class="text">
-			Australia es un país rodeado por los océanos Índico y Pacífico. Sus ciudades principales: Sídney, Brisbane,
-			Melbourne, Perth y Adelaida son costeras.
-		</p>
-		<img src="images/Australia.jpg" alt="Imagen Australia" />
-		<p>
-			El país ocupa la principal masa continental de la plataforma llamada Sahul, además de algunas islas en los
-			océanos Pacífico, Índico y Antártico. Los países más cercanos a Australia son Indonesia, Timor Oriental y
-			Papúa Nueva Guinea al norte, las Islas Salomón, Vanuatu y la dependencia francesa de Nueva Caledonia al
-			noreste, y Nueva Zelanda al sureste.
-		</p>
+
+	<div class="backgroundColor" id="indexMain">
+		<div id="dosCosos">
+			<div class="content lastColorWhite ">
+				<h1>Sus ciudades</h1>
+				<p class="text">
+					Australia es un país rodeado por los océanos Índico y Pacífico. Sus ciudades principales: Sídney,
+					Brisbane,
+					Melbourne, Perth y Adelaida son costeras.
+				</p>
+				<img src="images/Australia.jpg" alt="Imagen Australia" />
+				<p>
+					El país ocupa la principal masa continental de la plataforma llamada Sahul, además de algunas islas
+					en
+					los
+					océanos Pacífico, Índico y Antártico. Los países más cercanos a Australia son Indonesia, Timor
+					Oriental
+					y
+					Papúa Nueva Guinea al norte, las Islas Salomón, Vanuatu y la dependencia francesa de Nueva Caledonia
+					al
+					noreste, y Nueva Zelanda al sureste.
+				</p>
+			</div>
+
+			<div class="content lastColorWhite ">
+				<h1>Su Historia</h1>
+				<p class="text">
+					Los portugueses descubrieron Australia 300 años antes de la llegada del Capitán Cook
+				</p>
+				<img src="images/AustraliaHistoria.jpg" alt="Imagen Australia" />
+				<p>
+					Los portugueses descubrieron Australia 300 años antes de la llegada del Capitán Cook
+				</p>
+			</div>
+		</div>
+
+		<div class="content lastColorWhite" id="mainBlock">
+			<h1>Sídney</h1>
+			<p class="text">
+				Australia es un país rodeado por los océanos Índico y Pacífico. Sus ciudades principales: Sídney,
+				Brisbane,
+				Melbourne, Perth y Adelaida son costeras.
+			</p>
+			<img src="images/AustraliaBandera.png" alt="Imagen Australia" />
+			<p>
+				asdasd
+			</p>
+		</div>
 	</div>
+
+
 </body>
 
 </html>
