--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -15,7 +15,7 @@
 		</a>
 	</div>
 
-	<div class="menuNav mainColor">
+	<div class="menuNav backgroundColor">
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
 			<li><a href="mapa.html">Ubicacion</a></li>
@@ -53,11 +53,11 @@
 			<div class="content lastColorWhite ">
 				<h1>Su Historia</h1>
 				<p class="text">
-					Los portugueses descubrieron Australia 300 años antes de la llegada del Capitán Cook
+					Los portugueses descubrieron Australia 300 años antes de la llegada del Capitán Cook.
 				</p>
 				<img src="images/AustraliaHistoria.jpg" alt="Imagen Australia" />
 				<p>
-					Los portugueses descubrieron Australia 300 años antes de la llegada del Capitán Cook
+					asdasdasd.
 				</p>
 			</div>
 		</div>
