--- a/JaimeEstupiñan_eje1/mapa.html
+++ b/JaimeEstupiñan_eje1/mapa.html
@@ -1,29 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html class="otherColor">
+
 <head>
-<meta charset="utf-8">
-<title>Mapa</title>
-<link href="estilos/estilos1.css" rel="stylesheet" type="text/css" >
-		<script src="phaser.js"></script>
-        <script src="Mapa.js"></script>
-		<script src="Main.js"></script>
+	<title>Australia</title>
+	<link href="styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
-<a name="inicio"></a>
-<tit> <a href="index.html" target="_self"><h1>LAS PIEDRAS DEL TUNJO</h1></a></tit>
-<nav class="menunav">
-	<a class="botonmenunav" target="_self" href="pagina1.html">Ubicación</a>
-	<a class="botonmenunav" target="_self" href="pagina2.html">Habitantes</a>
-	<a class="botonmenunav" target="_self" href="pagina3.html">Actividades</a>
-	<a class="botonmenunav" target="_self" href="pagina4.html">Historia</a>
-	<a class="botonmenunav" target="_self" href="pagina5.html">Créditos</a>
-    <a class="botonpress" target="_self" href="pagina6.html">Mapa</a>
-</nav>
-	<!-- menú de navegacion explicado en el index -->
-    <!-- redirecciona a Main.js -->
-    <div id="Main"> 
+<body class="body">
+	<div class=" backgroundColor" id="topPage">
+		<a href="index.html" target="_self" class="ref">
+			<h1 class="title" id="title">
+				AUSTRALIA
+			</h1>
+		</a>
 	</div>
-<h6>&copy; Santiago Morales Pulido. Todos los derechos reservados.</h6> <!-- se pone para los derechos de autos -->
+
+	<div class="menuNav backgroundColor">
+		<ul>
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="mapa.html">Ubicacion</a></li>
+			<li><a href="mapa.html">Personajes</a></li>
+			<li><a href="mapa.html">Actividades</a></li>
+			<li><a href="mapa.html">Historia</a></li>
+			<li><a href="mapa.html">Creditos</a></li>
+			<li><a href="mapa.html">Mapa</a></li>
+		</ul>
+	</div>
+
+	<div class="backgroundColor" id="indexMain">
+		<div class="content lastColorWhite" id="mainBlock">
+			<h1>Referencias</h1>
+			<p class="text">
+				Bandera de Australia:
+				https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Flag_of_Australia_%28converted%29.svg/1200px-Flag_of_Australia_%28converted%29.svg.png
+				Foto de Sidney:
+				https://cdn.civitatis.com/australia/sidney/sidney.jpg
+				Foto de historia de Australia:
+				https://cadenaser00.epimg.net/ser/imagenes/2019/05/25/internacional/1558768920_750800_1558769563_noticia_normal_recorte1.jpg
+			</p>
+		</div>
+	</div>
 </body>
+
 </html>
