--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Australia</title>
 	<link href="styles/styles.css" rel="stylesheet" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="body">
@@ -27,18 +28,22 @@
 		</ul>
 	</div>
 
+
+
 	<div class="backgroundColor" id="indexMain">
-		<div id="dosCosos">
+
+		<div class="containerContets">
 			<div class="content lastColorWhite ">
-				<h1>Sus ciudades</h1>
-				<p class="text">
+				<h1>Sus Ciudades</h1>
+				<p>
 					Australia es un país rodeado por los océanos Índico y Pacífico. Sus ciudades principales: Sídney,
 					Brisbane,
 					Melbourne, Perth y Adelaida son costeras.
 				</p>
 				<img src="images/Australia.jpg" alt="Imagen Australia" />
 				<p>
-					El país ocupa la principal masa continental de la plataforma llamada Sahul, además de algunas islas
+					Australia El país ocupa la principal masa continental de la plataforma llamada Sahul, además de
+					algunas islas
 					en
 					los
 					océanos Pacífico, Índico y Antártico. Los países más cercanos a Australia son Indonesia, Timor
@@ -53,27 +58,44 @@
 			<div class="content lastColorWhite ">
 				<h1>Su Historia</h1>
 				<p class="text">
-					Los portugueses descubrieron Australia 300 años antes de la llegada del Capitán Cook.
+					Se cree que los aborígenes australianos llegaron en barco desde el sudeste asiático hace unos 50.000
+					años.
 				</p>
 				<img src="images/AustraliaHistoria.jpg" alt="Imagen Australia" />
 				<p>
-					asdasdasd.
+					Cuando los europeos llegaron a Australia y la colonizaron, cerca de 1.000.000 de aborígenes vivían
+					en el territorio y se dedicaban a la caza y a la agricultura...
+					<a href="https://eacnur.org/blog/historia-australia-breve-resumen/" target="_blank">Continuar
+						leyendo</a>
 				</p>
 			</div>
+			
 		</div>
 
 		<div class="content lastColorWhite" id="mainBlock">
-			<h1>Sídney</h1>
+			<h1>Su Fauna</h1>
 			<p class="text">
-				Australia es un país rodeado por los océanos Índico y Pacífico. Sus ciudades principales: Sídney,
-				Brisbane,
-				Melbourne, Perth y Adelaida son costeras.
+				La fauna australiana agrupa una enorme variedad de animales únicos: el 83% de mamíferos, el 89% de
+				reptiles, el 90% de peces e insectos, y el 93% de anfibios que habitan el continente son endémicos del
+				país.
 			</p>
-			<img src="images/AustraliaBandera.png" alt="Imagen Australia" />
+			<div class="containerContets">
+				<div class="contentImg">
+					<img src="images/quokka.png" alt="Imagen Australia" />
+				</div>
+				<div class="contentImg">
+					<img src="images/Canguro.jpg" alt="Imagen Australia" />
+				</div>
+			</div>
 			<p>
-				asdasd
+					Este alto nivel de endemicidad puede ser atribuido al aislamiento del continente, a la estabilidad de sus placas tectónicas y al efecto de inusuales pautas de cambio climático, que afectan asimismo al suelo y a la flora, a lo largo del tiempo geológico.
+					Una característica única de la fauna australiana es la relativa escasez de mamíferos placentados, en oposición a la abundancia de marsupiales, un grupo de mamíferos que completan su desarrollo embrionario en un marsupio.
+			</p>
+			<p>
+					Estos marsupiales incluyen a los macrópodos, falageriformes y Dasyuromorphia (como el tilacino o lobo de Tasmania), los cuales ocupan un buen número de los nichos ecológicos explotados en otras partes del mundo por mamíferos placentados. Australia ha sido el territorio de dos de las cinco especies extintas conocidas de monotremas y de numerosas especies venenosas, como pueden ser el ornitorrinco, arañas, escorpiones, pulpos, medusas, peces globo y rayas. De hecho, Australia posee más especies de serpientes venenosas que inocuas, otra muestra más de su singularidad en este aspecto.
 			</p>
 		</div>
+
 	</div>
 
 
