--- a/JaimeEstupiñan_eje1/mapa.html
+++ b/JaimeEstupiñan_eje1/mapa.html
@@ -15,6 +15,8 @@
 		</a>
 	</div>
 
+
+
 	<div class="menuNav backgroundColor">
 		<ul>
 			<li><a href="index.html">Inicio</a></li>
@@ -31,12 +33,19 @@
 		<div class="content lastColorWhite" id="mainBlock">
 			<h1>Referencias</h1>
 			<p class="text">
+				Informacion:
+				https://es.wikipedia.org/wiki/Australia
+				https://es.wikipedia.org/wiki/Fauna_de_Australia
+				https://eacnur.org/blog/historia-australia-breve-resumen/
+
+				Imagenes:
 				Bandera de Australia:
 				https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Flag_of_Australia_%28converted%29.svg/1200px-Flag_of_Australia_%28converted%29.svg.png
-				Foto de Sidney:
+				Sidney:
 				https://cdn.civitatis.com/australia/sidney/sidney.jpg
-				Foto de historia de Australia:
+				Historia de Australia:
 				https://cadenaser00.epimg.net/ser/imagenes/2019/05/25/internacional/1558768920_750800_1558769563_noticia_normal_recorte1.jpg
+
 			</p>
 		</div>
 	</div>
