Vista de ubicacion completada :100:

--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -2,31 +2,39 @@
 <html class="otherColor">
 
 <head>
-	<title>Australia</title>
-	<link href="styles/styles.css" rel="stylesheet" type="text/css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Australia</title>
+    <link href="styles/styles.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base target="_blank">
 </head>
 
-<body class="body">
-	<div class=" backgroundColor" id="topPage">
-		<a href="index.html" target="_self" class="ref">
-			<h1 class="title" id="title">
-				AUSTRALIA
-			</h1>
-		</a>
-	</div>
+<!-- Contenido de la pagina -->
 
-	<div class="menuNav backgroundColor">
-		<ul>
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="mapa.html">Ubicacion</a></li>
-			<li><a href="mapa.html">Personajes</a></li>
-			<li><a href="mapa.html">Actividades</a></li>
-			<li><a href="mapa.html">Historia</a></li>
-			<li><a href="mapa.html">Creditos</a></li>
-			<li><a href="mapa.html">Mapa</a></li>
-		</ul>
-	</div>
+<body class="body">
+
+    <!--Header de la pagina web-->
+    <header class="body">
+        <!--Cabecera de la pagina web-->
+        <div class=" backgroundColor" id="topPage">
+            <a href="index.html" target="_self" class="ref">
+                <h1 class="title" id="title">
+                    AUSTRALIA
+                </h1>
+            </a>
+        </div>
+        <!--Barra de navegacion-->
+        <div class="menuNav backgroundColor">
+            <ul>
+                <li><a href="index.html" target="_self">Inicio</a></li>
+                <li><a href="ubicacion.html" target="_self">Ubicacion</a></li>
+                <li><a href="mapa.html" target="_self">Personajes</a></li>
+                <li><a href="mapa.html" target="_self">Actividades</a></li>
+                <li><a href="mapa.html" target="_self">Historia</a></li>
+                <li><a href="mapa.html" target="_self">Creditos</a></li>
+                <li><a href="mapa.html" target="_self">Mapa</a></li>
+            </ul>
+        </div>
+    </header>
 
 
 
@@ -37,15 +45,12 @@
 				<h1>Sus Ciudades</h1>
 				<p>
 					Australia es un país rodeado por los océanos Índico y Pacífico. Sus ciudades principales: Sídney,
-					Brisbane,
-					Melbourne, Perth y Adelaida son costeras.
+					Brisbane,Melbourne, Perth y Adelaida son costeras.
 				</p>
 				<img src="images/Australia.jpg" alt="Imagen Australia" />
 				<p>
-					Australia El país ocupa la principal masa continental de la plataforma llamada Sahul, además de
-					algunas islas
-					en
-					los
+					El país ocupa la principal masa continental de la plataforma llamada Sahul, además de
+					algunas islas en los
 					océanos Pacífico, Índico y Antártico. Los países más cercanos a Australia son Indonesia, Timor
 					Oriental
 					y
@@ -69,30 +74,39 @@
 						leyendo</a>
 				</p>
 			</div>
-			
+
 		</div>
 
 		<div class="content lastColorWhite" id="mainBlock">
 			<h1>Su Fauna</h1>
-			<p class="text">
+			<p>
 				La fauna australiana agrupa una enorme variedad de animales únicos: el 83% de mamíferos, el 89% de
 				reptiles, el 90% de peces e insectos, y el 93% de anfibios que habitan el continente son endémicos del
 				país.
 			</p>
 			<div class="containerContets">
 				<div class="contentImg">
-					<img src="images/quokka.png" alt="Imagen Australia" />
+					<img src="images/quokka.png" alt="Quokka" />
 				</div>
 				<div class="contentImg">
-					<img src="images/Canguro.jpg" alt="Imagen Australia" />
+					<img src="images/Canguro.jpg" alt="Canguro" />
 				</div>
 			</div>
 			<p>
-					Este alto nivel de endemicidad puede ser atribuido al aislamiento del continente, a la estabilidad de sus placas tectónicas y al efecto de inusuales pautas de cambio climático, que afectan asimismo al suelo y a la flora, a lo largo del tiempo geológico.
-					Una característica única de la fauna australiana es la relativa escasez de mamíferos placentados, en oposición a la abundancia de marsupiales, un grupo de mamíferos que completan su desarrollo embrionario en un marsupio.
+				Este alto nivel de endemicidad puede ser atribuido al aislamiento del continente, a la estabilidad de
+				sus placas tectónicas y al efecto de inusuales pautas de cambio climático, que afectan asimismo al suelo
+				y a la flora, a lo largo del tiempo geológico.
+				Una característica única de la fauna australiana es la relativa escasez de mamíferos placentados, en
+				oposición a la abundancia de marsupiales, un grupo de mamíferos que completan su desarrollo embrionario
+				en un marsupio.
 			</p>
 			<p>
-					Estos marsupiales incluyen a los macrópodos, falageriformes y Dasyuromorphia (como el tilacino o lobo de Tasmania), los cuales ocupan un buen número de los nichos ecológicos explotados en otras partes del mundo por mamíferos placentados. Australia ha sido el territorio de dos de las cinco especies extintas conocidas de monotremas y de numerosas especies venenosas, como pueden ser el ornitorrinco, arañas, escorpiones, pulpos, medusas, peces globo y rayas. De hecho, Australia posee más especies de serpientes venenosas que inocuas, otra muestra más de su singularidad en este aspecto.
+				Estos marsupiales incluyen a los macrópodos, falageriformes y Dasyuromorphia (como el tilacino o lobo de
+				Tasmania), los cuales ocupan un buen número de los nichos ecológicos explotados en otras partes del
+				mundo por mamíferos placentados. Australia ha sido el territorio de dos de las cinco especies extintas
+				conocidas de monotremas y de numerosas especies venenosas, como pueden ser el ornitorrinco, arañas,
+				escorpiones, pulpos, medusas, peces globo y rayas. De hecho, Australia posee más especies de serpientes
+				venenosas que inocuas, otra muestra más de su singularidad en este aspecto.
 			</p>
 		</div>
 
