--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -27,11 +27,10 @@
             <ul>
                 <li><a href="index.html" target="_self">Inicio</a></li>
                 <li><a href="ubicacion.html" target="_self">Ubicacion</a></li>
-                <li><a href="mapa.html" target="_self">Personajes</a></li>
-                <li><a href="mapa.html" target="_self">Actividades</a></li>
-                <li><a href="mapa.html" target="_self">Historia</a></li>
-                <li><a href="mapa.html" target="_self">Creditos</a></li>
-                <li><a href="mapa.html" target="_self">Mapa</a></li>
+                <li><a href="personajes.html" target="_self">Personajes</a></li>
+                <li><a href="actividades.html" target="_self">Actividades</a></li>
+                <li><a href="historia.html" target="_self">Historia</a></li>
+                <li><a href="creditos.html" target="_self">Creditos</a></li>
             </ul>
         </div>
     </header>
