--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -2,44 +2,45 @@
 <html class="otherColor">
 
 <head>
-    <title>Australia</title>
-    <link href="styles/styles.css" rel="stylesheet" type="text/css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base target="_blank">
+	<title>Australia</title>
+	<link href="styles/styles.css" rel="stylesheet" type="text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<base target="_blank">
 </head>
 
 <!-- Contenido de la pagina -->
 
 <body class="body">
 
-    <!--Header de la pagina web-->
-    <header class="body">
-        <!--Cabecera de la pagina web-->
-        <div class=" backgroundColor" id="topPage">
-            <a href="index.html" target="_self" class="ref">
-                <h1 class="title" id="title">
-                    AUSTRALIA
-                </h1>
-            </a>
-        </div>
-        <!--Barra de navegacion-->
-        <div class="menuNav backgroundColor">
-            <ul>
-                <li><a href="index.html" target="_self">Inicio</a></li>
-                <li><a href="ubicacion.html" target="_self">Ubicacion</a></li>
-                <li><a href="personajes.html" target="_self">Personajes</a></li>
-                <li><a href="actividades.html" target="_self">Actividades</a></li>
-                <li><a href="historia.html" target="_self">Historia</a></li>
-                <li><a href="creditos.html" target="_self">Creditos</a></li>
-            </ul>
-        </div>
-    </header>
+	<!--Header de la pagina web-->
+	<header class="body">
+		<!--Cabecera de la pagina web-->
+		<div class=" backgroundColor" id="topPage">
+			<a href="index.html" target="_self" class="ref">
+				<h1 class="title" id="title">
+					AUSTRALIA
+				</h1>
+			</a>
+		</div>
+		<!--Barra de navegacion-->
+		<div class="menuNav backgroundColor">
+			<ul>
+				<li><a href="index.html" target="_self">Inicio</a></li>
+				<li><a href="ubicacion.html" target="_self">Ubicacion</a></li>
+				<li><a href="personajes.html" target="_self">Personajes</a></li>
+				<li><a href="actividades.html" target="_self">Actividades</a></li>
+				<li><a href="historia.html" target="_self">Historia</a></li>
+				<li><a href="creditos.html" target="_self">Creditos</a></li>
+			</ul>
+		</div>
+	</header>
 
-
-
+	<!--Seccion sobre la que se encuentra todo en esta pagina con un color correspondiente al bakcground color creado en css-->
 	<div class="backgroundColor" id="indexMain">
 
+		<!--div que tuliza la clase containerContets el cual se utilza para que los elementos con la clase content se ajusten automaticamente al tamaño de la pantalla-->
 		<div class="containerContets">
+			<!--div que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrados -->
 			<div class="content lastColorWhite ">
 				<h1>Sus Ciudades</h1>
 				<p>
@@ -58,7 +59,7 @@
 					noreste, y Nueva Zelanda al sureste.
 				</p>
 			</div>
-
+			<!--div que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrados -->
 			<div class="content lastColorWhite ">
 				<h1>Su Historia</h1>
 				<p class="text">
@@ -69,13 +70,14 @@
 				<p>
 					Cuando los europeos llegaron a Australia y la colonizaron, cerca de 1.000.000 de aborígenes vivían
 					en el territorio y se dedicaban a la caza y a la agricultura...
+					<!--Link para continuar leyendo-->
 					<a href="https://eacnur.org/blog/historia-australia-breve-resumen/" target="_blank">Continuar
 						leyendo</a>
 				</p>
 			</div>
 
 		</div>
-
+		<!--Segundo contenido sobre la fauna de australia el cual esta en un content-->
 		<div class="content lastColorWhite" id="mainBlock">
 			<h1>Su Fauna</h1>
 			<p>
@@ -83,10 +85,13 @@
 				reptiles, el 90% de peces e insectos, y el 93% de anfibios que habitan el continente son endémicos del
 				país.
 			</p>
+			<!--div que tuliza la clase containerContets el cual se utilza para que los elementos con la clase content se ajusten automaticamente al tamaño de la pantalla-->
 			<div class="containerContets">
+				<!--Se uso una clase contentImg que es especial para imagenes-->
 				<div class="contentImg">
 					<img src="images/quokka.png" alt="Quokka" />
 				</div>
+				<!--Se uso una clase contentImg que es especial para imagenes-->
 				<div class="contentImg">
 					<img src="images/Canguro.jpg" alt="Canguro" />
 				</div>
@@ -94,18 +99,15 @@
 			<p>
 				Este alto nivel de endemicidad puede ser atribuido al aislamiento del continente, a la estabilidad de
 				sus placas tectónicas y al efecto de inusuales pautas de cambio climático, que afectan asimismo al suelo
-				y a la flora, a lo largo del tiempo geológico.
-				Una característica única de la fauna australiana es la relativa escasez de mamíferos placentados, en
-				oposición a la abundancia de marsupiales, un grupo de mamíferos que completan su desarrollo embrionario
-				en un marsupio.
-			</p>
-			<p>
-				Estos marsupiales incluyen a los macrópodos, falageriformes y Dasyuromorphia (como el tilacino o lobo de
-				Tasmania), los cuales ocupan un buen número de los nichos ecológicos explotados en otras partes del
-				mundo por mamíferos placentados. Australia ha sido el territorio de dos de las cinco especies extintas
-				conocidas de monotremas y de numerosas especies venenosas, como pueden ser el ornitorrinco, arañas,
-				escorpiones, pulpos, medusas, peces globo y rayas. De hecho, Australia posee más especies de serpientes
-				venenosas que inocuas, otra muestra más de su singularidad en este aspecto.
+				y a la flora, a lo largo del tiempo geológico. Una característica única de la fauna australiana es la
+				relativa escasez de mamíferos placentados, en oposición a la abundancia de marsupiales, un grupo de
+				mamíferos que completan su desarrollo embrionario en un marsupio. Estos marsupiales incluyen a los
+				macrópodos, falageriformes y Dasyuromorphia (como el tilacino o lobo de Tasmania), los cuales ocupan un
+				buen número de los nichos ecológicos explotados en otras partes del mundo por mamíferos placentados.
+				Australia ha sido el territorio de dos de las cinco especies extintas conocidas de monotremas y de
+				numerosas especies venenosas, como pueden ser el ornitorrinco, arañas, escorpiones, pulpos, medusas,
+				peces globo y rayas. De hecho, Australia posee más especies de serpientes venenosas que inocuas, otra
+				muestra más de su singularidad en este aspecto.
 			</p>
 		</div>
 
