--- a/JaimeEstupiñan_eje1/ubicacion.html
+++ b/JaimeEstupiñan_eje1/ubicacion.html
@@ -35,12 +35,19 @@
         </div>
     </header>
 
-
+    <!--Seccion sobre la que se encuentra todo en esta pagina, se uso la clase backgroundColor la cual contiene un creado  en css para fondos y zonas especiales-->
     <div class="backgroundColor" id="indexMain">
-
+        <!--div que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrafos -->
         <div class="content lastColorWhite" id="mainBlock">
             <h1>Geografía de Australia:</h1>
+            <!--Se uso la etiqueta ol ya que se tiene una lista ordenada de elementos-->
             <ol>
+                <!--Se uso una etqueta a ya que cada elemento de la lista representa una seccion a la que se pued dirigir el usuario-->
+                <!--Se uso el targe self para que no se abra otra pestaña-->
+                <a href="#Resumen" target="_self">
+                    <!--Se definio el li adentro para que el numero de la lista tambien redireccione y no solo el texto-->
+                    <li>Resumen</li>
+                </a>
                 <a href="#Hidrografia" target="_self">
                     <li>Hidrografia</li>
                 </a>
@@ -60,9 +67,10 @@
         </div>
     </div>
 
+    <!--Seccion sobre la que se encuentra todo en esta pagina, se uso la clase backgroundColor la cual contiene un creado  en css para fondos y zonas especiales-->
     <div class="backgroundColor" id="indexMain">
-
-        <div class="content lastColorWhite" id="mainBlock">
+        <!--section que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrafos, es de tipo section para dirigir a esta seccion con su id -->
+        <section id="Resumen" class="content lastColorWhite">
             <h1>Geografía de Australia</h1>
             <p>
                 La geografía de Australia abarca una amplia variedad de regiones biogeográficas siendo el continente más
@@ -79,9 +87,10 @@
                 superficie
                 total de Australia.
             </p>
-        </div>
-
+        </section>
+        <!--div que tuliza la clase containerContets el cual se utilza para que los elementos con la clase content se ajusten automaticamente al tamaño de la pantalla-->
         <div class="containerContets">
+            <!--section que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrafos, es de tipo section para dirigir a esta seccion con su id -->
             <section id="Hidrografia" class="content lastColorWhite ">
                 <h1>Hidrografía</h1>
                 <p>
@@ -108,6 +117,7 @@
 
             </section>
 
+            <!--section que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrafos, es de tipo section para dirigir a esta seccion con su id -->
             <section id="Clima" class="content lastColorWhite ">
 
                 <h1>Clima</h1>
