--- a/JaimeEstupiñan_eje1/index.html
+++ b/JaimeEstupiñan_eje1/index.html
@@ -31,6 +31,7 @@
 				<li><a href="actividades.html" target="_self">Actividades</a></li>
 				<li><a href="historia.html" target="_self">Historia</a></li>
 				<li><a href="creditos.html" target="_self">Creditos</a></li>
+				<li><a href="mapa.html" target="_self">Mapa</a></li>
 			</ul>
 		</div>
 	</header>
