--- a/JaimeEstupiñan_eje1/personajes.html
+++ b/JaimeEstupiñan_eje1/personajes.html
@@ -31,6 +31,7 @@
                 <li><a href="actividades.html" target="_self">Actividades</a></li>
                 <li><a href="historia.html" target="_self">Historia</a></li>
                 <li><a href="creditos.html" target="_self">Creditos</a></li>
+                <li><a href="mapa.html" target="_self">Mapa</a></li>
             </ul>
         </div>
     </header>
@@ -77,7 +78,7 @@
                     Existe una pequeña colonia continental en el área protegida Two Peoples Bay, donde convive con
                     Potorous gilbertii. No se han descrito subespecies. Es reconocido por ser un marsupial con
                     características especiales de su genero, como su alto grado de sociabilidad y la constante alegría
-                    que se refleja en la apertura de su boca. 2​
+                    que se refleja en la apertura de su boca.
                 </p>
             </div>
             <!--div que utiliza la clase content que usa el color diseñado para el fondo del contendo de documentos y parrafos -->
