--- a/JaimeEstupiñan_eje1/mapa.html
+++ b/JaimeEstupiñan_eje1/mapa.html
@@ -330,6 +330,11 @@
                             <li class="liInfoMap">Sonidos</li>
                             Los sonidos son ejecutador cuando el usuario selecciona un alguno de los estados, el boton
                             de informacion o los botones para volver al mapa.
+                            <li class="liInfoMap">Se adapta y funciona en diferentes resoluciones (moviles)</li>
+                            Toda la pagina incluyendo el mapa estan diseñados para funcionar en diferentes resoluciones
+                            de dispositivos como por ejemplo celulares
+                            <img src="images/mapa/Australia_interactive_map_cellphone.jpg" alt="button_informacion_1"
+                                id="imgBotonInfoMap" />
                         </ol>
                     </p>
                     <button class="buttonMap" onclick="onClickReturnMap('informationMap')">Volver</button>
